--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,6 +1,7 @@
 services:
   # Local MySQL database service
   database:
+    hostname: database
     image: mysql
     volumes:
       - ../bin/mysql:/var/lib/mysql
