--- a/src/DapperBeer/DapperBeer.csproj
+++ b/src/DapperBeer/DapperBeer.csproj
@@ -12,10 +12,9 @@
       <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
       <PackageReference Include="FluentAssertions" Version="6.12.2" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
       <PackageReference Include="MySqlConnector" Version="2.4.0" />
       <PackageReference Include="SqlKata" Version="2.4.0" />
-      <PackageReference Include="TUnit" Version="0.10.28" />
-      <PackageReference Include="Verify.TUnit" Version="28.10.1" />
     </ItemGroup>
     
     <ItemGroup>
@@ -43,10 +42,9 @@
       <None Update="SQL\InsertBrewmaster.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-    </ItemGroup>
-    
-    <ItemGroup>
-      <Folder Include="Snapshots\" />
+      <None Update="SQL\InsertReview.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
