--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -5,15 +5,14 @@ services:
     image: mysql
     volumes:
       - ../bin/mysql:/var/lib/mysql
+      - ./mysql.cnf:/etc/mysql/my.cnf
+      - ../logs/mysql:/var/log/mysql
+      - /tmp/mysql:/tmp/mysql
     environment:
       - MYSQL_ROOT_PASSWORD=${SA_PASSWORD}
       - MYSQL_DATABASE=${APP_DB_NAME}
       - MYSQL_USER=${APP_DB_USER}
       - MYSQL_PASSWORD=${APP_DB_PASS}
-    ports:
-      - 3306:3306
-    expose:
-      - 3306
     restart: always
 
   phpmyadmin:
