--- a/src/DapperBeer/DapperBeer.csproj
+++ b/src/DapperBeer/DapperBeer.csproj
@@ -12,37 +12,54 @@
       <PackageReference Include="Dapper" Version="2.1.35" />
       <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
       <PackageReference Include="FluentAssertions" Version="6.12.2" />
-      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
       <PackageReference Include="MySqlConnector" Version="2.4.0" />
       <PackageReference Include="SqlKata" Version="2.4.0" />
     </ItemGroup>
     
     <ItemGroup>
-      <None Update="SQL\CreateTables.SQL">
+      <None Update="SQL\tables\00_Address.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertSells.sql">
+      <None Update="SQL\tables\00_Brewer.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertCafe.sql">
+      <None Update="SQL\tables\00_Cafe.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertBrewer.sql">
+      <None Update="SQL\tables\01_Beer.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertBeer.sql">
+      <None Update="SQL\tables\01_Brewmaster.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertAddress.sql">
+      <None Update="SQL\tables\02_Review.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertBrewmasters.sql">
+      <None Update="SQL\tables\02_Sells.SQL">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertBrewmaster.sql">
+      <None Update="SQL\data\InsertSells.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
-      <None Update="SQL\InsertReview.sql">
+      <None Update="SQL\data\InsertCafe.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertBrewer.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertBeer.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertAddress.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertBrewmasters.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertBrewmaster.sql">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="SQL\data\InsertReview.sql">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
