--- a/src/DapperBeer_nunit/DapperBeer_nunit.csproj
+++ b/src/DapperBeer_nunit/DapperBeer_nunit.csproj
@@ -10,6 +10,11 @@
       <PackageReference Include="NUnit" Version="4.3.2" />
       <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
       <PackageReference Include="Verify.NUnit" Version="28.10.1" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+      <PackageReference Include="NUnit.Analyzers" Version="4.6.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
