--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -33,14 +33,14 @@ services:
       # Docker socket to access Docker server
       - /var/run/docker.sock:/var/run/docker.sock
       # SSH directory
-      - ~/.ssh:/root/.ssh
+      - ~/.ssh:/vscode/.ssh
       # For Windows without WSL, a copy will be made
       # from /tmp/.ssh to ~/.ssh to fix permissions
       # - ~/.ssh:/tmp/.ssh:ro
       # Shell history persistence
-      - ~/.zsh_history:/root/.zsh_history:z
+      - ~/.zsh_history:/vscode/.zsh_history:z
       # Git config
-      - ~/.gitconfig:/root/.gitconfig
+      - ~/.gitconfig:/vscode/.gitconfig
       # Easy of Use
       - ../scripts:/scripts
     #restart: unless-stopped
