--- a/src/DapperBeer_nunit/DapperBeer_nunit.csproj
+++ b/src/DapperBeer_nunit/DapperBeer_nunit.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+      <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
       <PackageReference Include="NUnit" Version="4.3.2" />
       <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
       <PackageReference Include="Verify.NUnit" Version="28.10.1" />
@@ -16,7 +17,6 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
       </PackageReference>
     </ItemGroup>
-
     <ItemGroup>
       <ProjectReference Include="..\DapperBeer\DapperBeer.csproj" />
     </ItemGroup>
