--- a/.devcontainer/mysql.cnf
+++ b/.devcontainer/mysql.cnf
@@ -12,7 +12,8 @@ tmpdir=/tmp/mysql
 # https://staffordwilliams.com/blog/2015/11/11/optimising-wordpress-and-mysql-docker-images-for-amazon-ec2-micro-instances/?ref=marcopeg.com
 
 # Disabling performance_schema
-performance_schema=0
+#performance_schema=0
+innodb-flush-method=O_DSYNC
 
 #innodb_buffer_pool_size=5M
 #innodb_log_buffer_size=256K
