--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -89,7 +89,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-1-GetAllBrewersTest
-          command: dotnet run --project /workspace/src/DapperBeer_nunit --treenode-filter "/*/*/Assignments1Tests/GetAllBrewersTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBrewersTest"
           timeout: 10
           max-score: 1
       - name: 1.2 GetAllBeersOrderByAlcoholTest
@@ -97,7 +97,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-2-GetAllBeersOrderByAlcoholTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersOrderByAlcoholTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersOrderByAlcoholTest"
           timeout: 10
           max-score: 1
       - name: 1.3 GetAllBeersSortedByNameForCountryTest
@@ -105,7 +105,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-3-GetAllBeersSortedByNameForCountryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersSortedByNameForCountryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersSortedByNameForCountryTest"
           timeout: 10
           max-score: 1
       - name: 1.4 CountBrewersTest
@@ -113,7 +113,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-4-CountBrewersTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/CountBrewersTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/CountBrewersTest"
           timeout: 10
           max-score: 1
       - name: 1.5 NumberOfBrewersByCountryTest
@@ -121,7 +121,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-5-NumberOfBrewersByCountryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/NumberOfBrewersByCountryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/NumberOfBrewersByCountryTest"
           timeout: 10
           max-score: 1
       - name: 1.6 GetBeerWithMostAlcoholTest
@@ -129,7 +129,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-6-GetBeerWithMostAlcoholTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBeerWithMostAlcoholTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBeerWithMostAlcoholTest"
           timeout: 10
           max-score: 1
       - name: 1.7 GetBreweryByBrewerIdTest
@@ -137,7 +137,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-7-GetBreweryByBrewerIdTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBreweryByBrewerIdTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBreweryByBrewerIdTest"
           timeout: 10
           max-score: 1
       - name: 1.8 GetAllBeersByBreweryIdTest
@@ -145,7 +145,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-8-GetAllBeersByBreweryIdTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersByBreweryIdTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBeersByBreweryIdTest"
           timeout: 10
           max-score: 1
       - name: 1.9 GetCafeBeersTest
@@ -153,7 +153,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-9-GetCafeBeersTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetCafeBeersTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetCafeBeersTest"
           timeout: 10
           max-score: 1
       - name: 1.10 GetCafeBeersByListTest
@@ -161,7 +161,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-10-GetCafeBeersByListTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetCafeBeersByListTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetCafeBeersByListTest"
           timeout: 10
           max-score: 1
       - name: 1.11 GetBeerRatingTest
@@ -169,7 +169,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-11-GetBeerRatingTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBeerRatingTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetBeerRatingTest"
           timeout: 10
           max-score: 1
       - name: 1.12 InsertReview
@@ -177,7 +177,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-12-InsertReview
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/InsertReview"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/InsertReview"
           timeout: 10
           max-score: 1
       - name: 1.13 UpdateReviewTest
@@ -185,7 +185,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-13-UpdateReviewTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/UpdateReviewTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/UpdateReviewTest"
           timeout: 10
           max-score: 1
       - name: 1.14 RemoveReviewTest
@@ -193,7 +193,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 1-14-RemoveReviewTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/RemoveReviewTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/RemoveReviewTest"
           timeout: 10
           max-score: 1
       - name: 2.1 GetBeersByCountryWithSqlInjectionTest
@@ -201,7 +201,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-1-GetBeersByCountryWithSqlInjectionTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetBeersByCountryWithSqlInjectionTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetBeersByCountryWithSqlInjectionTest"
           timeout: 10
           max-score: 1
       - name: 2.2 GetAllBeersByCountryTest
@@ -209,7 +209,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-2-GetAllBeersByCountryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryTest"
           timeout: 10
           max-score: 1
       - name: 2.3 GetAllBeersByCountryAndMinAlcoholTest
@@ -217,7 +217,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-3-GetAllBeersByCountryAndMinAlcoholTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryAndMinAlcoholTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryAndMinAlcoholTest"
           timeout: 10
           max-score: 1
       - name: 2.4 GetAllBeersByCountryAndTypeTest
@@ -225,7 +225,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-4-GetAllBeersByCountryAndTypeTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryAndTypeTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeersByCountryAndTypeTest"
           timeout: 10
           max-score: 1
       - name: 2.5 GetAllBeerNamesWithBreweryAndBrewmasterTest
@@ -233,7 +233,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-5-GetAllBeerNamesWithBreweryAndBrewmasterTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeerNamesWithBreweryAndBrewmasterTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetAllBeerNamesWithBreweryAndBrewmasterTest"
           timeout: 10
           max-score: 1
       - name: 2.6 GetBeersByCountryAndTypeTest
@@ -241,7 +241,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 2-6-GetBeersByCountryAndTypeTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetBeersByCountryAndTypeTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments2Tests/GetBeersByCountryAndTypeTest"
           timeout: 10
           max-score: 1
       - name: 3.1 GetAllBrouwmeestersIncludesAddressTest
@@ -249,7 +249,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-1-GetAllBrouwmeestersIncludesAddressTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrouwmeestersIncludesAddressTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrouwmeestersIncludesAddressTest"
           timeout: 10
           max-score: 1
       - name: 3.2 GetAllBrewmastersWithBreweryTest
@@ -257,7 +257,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-2-GetAllBrewmastersWithBreweryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewmastersWithBreweryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewmastersWithBreweryTest"
           timeout: 10
           max-score: 1
       - name: 3.3 GetAllBrewersIncludeBrewmasterTest
@@ -265,7 +265,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-3-GetAllBrewersIncludeBrewmasterTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBrewmasterTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBrewmasterTest"
           timeout: 10
           max-score: 1
       - name: 3.4 GetAllBeersIncludeBreweryTest
@@ -273,7 +273,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-4-GetAllBeersIncludeBreweryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBeersIncludeBreweryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBeersIncludeBreweryTest"
           timeout: 10
           max-score: 1
       - name: 3.5 GetAllBrewersIncludingBeersNPlus1Test
@@ -281,7 +281,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-5-GetAllBrewersIncludingBeersNPlus1Test
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludingBeersNPlus1Test"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludingBeersNPlus1Test"
           timeout: 10
           max-score: 1
       - name: 3.6 GetAllBrewersIncludeBeersTest
@@ -289,7 +289,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-6-GetAllBrewersIncludeBeersTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBeersTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBeersTest"
           timeout: 10
           max-score: 1
       - name: 3.7 GetAllBeersIncludeBreweryAndIncludeBeersInBreweryTest
@@ -297,7 +297,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-7-GetAllBeersIncludeBreweryAndIncludeBeersInBreweryTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBeersIncludeBreweryAndIncludeBeersInBreweryTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBeersIncludeBreweryAndIncludeBeersInBreweryTest"
           timeout: 10
           max-score: 1
       - name: 3.8 GetAllBrewersIncludeBeersThenIncludeCafesTest
@@ -305,7 +305,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-8-GetAllBrewersIncludeBeersThenIncludeCafesTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBeersThenIncludeCafesTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetAllBrewersIncludeBeersThenIncludeCafesTest"
           timeout: 10
           max-score: 1
       - name: 3.9 GetBeerAndBrewersByViewTest
@@ -313,7 +313,7 @@ jobs:
         uses: classroom-resources/autograding-command-grader@v1
         with:
           test-name: 3-9-GetBeerAndBrewersByViewTest
-          command: dotnet run --project /workspace/src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetBeerAndBrewersByViewTest"
+          command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments3Tests/GetBeerAndBrewersByViewTest"
           timeout: 10
           max-score: 1
           
