--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -7,6 +7,12 @@ permissions:
   checks: write
   actions: read
   contents: read
+
+env:
+  APP_DB_NAME: DapperBeer
+  APP_DB_USER: DapperBeer
+  APP_DB_PASS: Test@1234!
+
 jobs:  
   run-autograding-tests:
     runs-on: ubuntu-latest
@@ -16,9 +22,9 @@ jobs:
         image: mysql
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: test_db
-          MYSQL_USER: test_user
-          MYSQL_PASSWORD: test_pass
+          MYSQL_DATABASE: $APP_DB_NAME
+          MYSQL_USER: $APP_DB_USER
+          MYSQL_PASSWORD: $APP_DB_PASS
         ports:
           - 3306:3306
         options: >-
@@ -54,10 +60,6 @@ jobs:
       - name: Connect to MySQL and run a query
         run: |
           mysql -h 127.0.0.1 -u test_user -ptest_pass test_db -e "SELECT NOW();"
-
-      - name: create beer database and user
-        run: |
-          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE DapperBeer;CREATE USER IF NOT EXISTS 'DapperBeer'@'%' IDENTIFIED BY 'Test@1234!';GRANT ALL PRIVILEGES ON DapperBeer.* TO 'DapperBeer'@'%';FLUSH PRIVILEGES;"
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.3.0
