--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -23,9 +23,9 @@ jobs:
         image: mysql
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: $APP_DB_NAME
-          MYSQL_USER: $APP_DB_USER
-          MYSQL_PASSWORD: $APP_DB_PASS
+          MYSQL_DATABASE: ${{ env.APP_DB_NAME }}
+          MYSQL_USER: ${{ env.APP_DB_USER }}
+          MYSQL_PASSWORD: ${{ env.APP_DB_PASS }}
         ports:
           - 3306:3306
         options: >-
@@ -92,11 +92,6 @@ jobs:
           command: dotnet run --project ./src/DapperBeer_tunit --treenode-filter "/*/*/Assignments1Tests/GetAllBrewersTest"
           timeout: 10
           max-score: 1
-        env:
-          APP_DB_SERVER: localhost
-          APP_DB_NAME: DapperBeer
-          APP_DB_USER: DapperBeer
-          APP_DB_PASS: Test@1234!
 
       - name: Autograding Reporter Dapper Beer
         uses: education/autograding-grading-reporter@v1
